# kyradi-saas-canli

./: .gitignore  Dockerfile  GITHUB_SETUP.md  KYRADI_Mimari_Teknik_Dokuman.md  QA_QUICK_CHECKLIST.md  QA_TEST_REPORT.md  README.md  railway.json  vercel.json
backend/: Dockerfile  EMAIL_FIX_INSTRUCTIONS.md  EMAIL_SETUP_NOW.txt  EMAIL_SMS_SETUP.md  FINAL_FIX.md  ILETIMERKEZI_API_FIX.md  QUICK_EMAIL_SETUP.sh  QUICK_FIX.md  QUICK_SETUP.md  QUICK_SMS_SETUP.md  SETUP_EMAIL_SMS.txt  SMS_READY.md  SMS_SERVICES_COMPARISON.md  SMS_TEST_READY.md  TWILIO_FIX_GUIDE.md  TWILIO_FREE_SETUP.md  TWILIO_SETUP_STEP_BY_STEP.md  TWILIO_TURKEY_ISSUE.md  pyproject.toml  requirements.txt
backend/ai/: __init__.py  observability.py  prompts.py  rate_limit.py  router.py  schemas.py
backend/app/: __init__.py  main.py
backend/common/: __init__.py  audit.py  rate_limit.py  security.py
backend/docs/: AI_ASSISTANT_GUIDE.md  PAYMENT_QUICK_REFERENCE.md  PAYMENT_SYSTEM_GUIDE.md  backend-healthcheck.md
backend/kyradi_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: 001_pgvector.sql  002_reservations.sql  env.py
backend/reservations/: __init__.py  availability.py  models.py  router_admin.py  router_private.py  router_public.py  schemas.py  services.py  validation.py
backend/scripts/: add_luggage_columns.py  send_test_email.py  startup.sh  test_email_sms.py
backend/tests/: README.md  conftest.py  test_ai_endpoints.py  test_auth.py  test_auth_host_separation.py  test_auth_onboarding.py  test_forgot_password_api.py  test_p0_hardening.py  test_password_reset.py  (+8 more)
(+430 files in other folders)
