[project]
name = "kyradi-backend"
version = "0.1.0"
description = "KYRADİ SaaS FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.12.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[argon2,bcrypt]>=1.7.4",
  "argon2-cffi>=23.1.0",
  "pydantic[email]>=2.5.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "uvloop>=0.19.0",
  "openai>=1.0.0",
  "weasyprint>=61.0",
  "python-docx>=1.1.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0"
]

[tool.uvicorn]
factory = false
host = "0.0.0.0"
port = 8000

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.poetry]
package-mode = false

[tool.setuptools.packages.find]
include = ["app*", "ai*", "common*", "reservations*"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

[tool.basedpyright]
typeCheckingMode = "basic"
reportMissingImports = "warning"
pythonVersion = "3.12"
pythonPlatform = "All"
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/venv",
    "**/migrations/versions",
]
